--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="logo-header">
   <a href="vision_mission_only.html" tabindex="0">
-    <img src="https://tse3.mm.bing.net/th/id/OIP.qkh_nRagADDF7JD5LqXhjQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="HomeEase Logo" class="logo c2" />
+    <img src="logo.png" alt="HomeEase Logo" class="logo c2" />
   </a>
   <div>
     <a class="c1" href="vision_mission_only.html" tabindex="0">
