--- a/vision_mission_only.html
+++ b/vision_mission_only.html
@@ -63,7 +63,7 @@
   <header>
     <div class="logo-header">
       <a href="index.html" tabindex="0">
-        <img class="c2" src="https://tse3.mm.bing.net/th/id/OIP.qkh_nRagADDF7JD5LqXhjQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="HomeEase Logo" class="logo" />
+        <img class="c2" src="logo.png" alt="HomeEase Logo" class="logo" />
       </a>
       <div>
         <a class="c1" href="vision.html" tabindex="0">
