--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Email: support@Homeease.in</p>
-    <p>Phone: +91-XXXXXXXXXX</p>
+    <p>Phone: +91-9876543210</p>
     <p>Location: Serving families across India</p>
   </section>
 
